# groovescript

./: .claudeignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  build-and-open  build-pdf  pyproject.toml  scaffold-chart  setup.sh
.github/workflows/: ci.yml  deploy-editor.yml  editor-ci.yml
charts/: README.md
docs/: DSL_REFERENCE.md  GETTING_STARTED.md  TUTORIAL.md
editors/vim/: README.md
editors/web/: app.js  gs-mode.js  gs-mode.test.js  index.html  manifest.webmanifest  package-lock.json  package.json  style.css
src/groovescript/: ast_nodes.py  cli.py  compiler.py  errors.py  fill_library.gs  grammar.lark  groove_library.gs  library.py  lilypond.py  lilypond_template.ly  lint.py  midi.py  musicxml.py  parser.py  parser_errors.py  parser_notation.py  parser_preprocess.py  parser_transformer.py  variation_library.gs
templates/: ballad.gs  ballad.ly  funk.gs  funk.ly  jazz.gs  jazz.ly  rock.gs  rock.ly  waltz.gs  waltz.ly
tests/: test_buzz_rolls.py  test_cli.py  test_compiler.py  test_crash_in.py  test_dynamics.py  test_ergonomics.py  test_errors.py  test_fill_library.py  test_hihat_foot.py  test_library.py  test_lilypond.py  test_lint.py  test_midi.py  test_musicxml.py  test_named_variations.py  test_parser_arrangement.py  test_parser_basic.py  test_parser_fills.py  test_parser_notation.py  test_parser_variations.py  test_thirty_second_doubles.py
tests/fixtures/: basic_arrangement.gs  basic_arrangement.ly  buzz_roll.gs  buzz_roll.ly  chained_like.gs  chained_like.ly  compact_option.gs  compact_option.ly  count_notes_fills.gs  crash_in.gs  (+72 more)
(+3 files in other folders)
